--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lock-picker",
   "version": "0.0.0-see-manifest-json",
-  "description": "프로텍트 팔로우를 찾고, 차단이나 블언블을 하는 확장기능",
+  "description": "프로텍트 계정의 팔로우를 찾고, 차단이나 블언블하는 확장기능",
   "main": "LockPicker/manifest.json",
   "repository": "https://github.com/gaeulbyul/LockPicker",
   "author": "Gaeulbyul <aeiou256@gmail.com>",
