--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
   "license": "MIT",
   "devDependencies": {
     "eslint-plugin-typescript": "^0.12.0",
-    "standard": "^12.0.1",
-    "tslint": "^5.11.0",
-    "tslint-config-standard": "^8.0.1",
+    "prettier": "^1.15.2",
     "typescript": "^3.1.3",
-    "typescript-eslint-parser": "^20.0.0",
     "web-ext-types": "^3.0.0"
   }
 }
