--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
   "license": "MIT",
   "devDependencies": {
     "eslint-plugin-typescript": "^0.12.0",
+    "husky": "^1.1.3",
     "prettier": "^1.15.2",
+    "pretty-quick": "^1.8.0",
     "typescript": "^3.1.3",
     "web-ext-types": "^3.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
