--- a/src/manifest.json
+++ b/src/manifest.json
@@ -20,13 +20,8 @@
 
   "content_scripts": [
     {
-      "matches": [
-        "*://twitter.com/*",
-        "*://mobile.twitter.com/*"
-      ],
-      "css": [
-        "styles/style.css"
-      ],
+      "matches": ["*://twitter.com/*", "*://mobile.twitter.com/*"],
+      "css": ["styles/style.css"],
       "js": [
         "vendor/browser-polyfill.min.js",
         "scripts/common.js",
