--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "lock-picker",
-  "version": "0.0.0-see-manifest-json",
+  "version": "0.0.0",
   "description": "프로텍트 계정의 팔로우를 찾고, 차단이나 블언블하는 확장기능",
   "main": "LockPicker/manifest.json",
   "repository": "https://github.com/gaeulbyul/LockPicker",
   "author": "Gaeulbyul <aeiou256@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "husky": "^1.1.3",
-    "prettier": "^1.15.2",
-    "pretty-quick": "^1.8.0",
-    "typescript": "^3.3.1",
-    "web-ext-types": "^3.0.0"
+    "husky": "^4.2.5",
+    "prettier": "^2.1.2",
+    "pretty-quick": "^3.0.2",
+    "typescript": "^4.3.3",
+    "web-ext-types": "^3.2.1"
   },
   "husky": {
     "hooks": {
