--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
   "license": "MIT",
   "devDependencies": {
     "husky": "^4.2.5",
+    "just-scripts": "^1.5.6",
+    "mkdirp": "^1.0.4",
+    "ncp": "^2.0.0",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.0.2",
+    "rimraf": "^3.0.2",
     "typescript": "^4.3.3",
     "web-ext-types": "^3.2.1"
+  },
+  "scripts": {
+    "build": "just default",
+    "just": "just"
   },
   "husky": {
     "hooks": {
