--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "pretty-quick --staged && tsc --noEmit"
     }
   }
 }
